[Re #6] Finished first draft of index view.

--- a/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_base.less
+++ b/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_base.less
@@ -3,7 +3,9 @@
 @import "normalize.less"; /* Normalize css display between various browsers */
 
 /*--------------------------------- FONTS ---------------------------------- */
-@font_stack: '"High Tower Text", "Big Caslon", serif;';
+body {
+    font-family: "High Tower Text", "Big Caslon", serif;
+}
 
 /*--------------------------------- COLORS --------------------------------- */
 @color_caption_background: rgb(0,0,0);
@@ -15,3 +17,5 @@
 @color_blue_light: #79b9d5;
 @color_blue_dark: #578599;
 @color_blue_desaturated: #89aab1;
+@color_background_brown: #462712;
+@color_background_grey: #333;
