--- a/cb_info_db/cbar_db/templates/cbar_db/index.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/index.html
@@ -1,8 +1,18 @@
-{% load staticfiles %}
-<head>
-    <link rel="stylesheet" type="text/css" href="{% static "cbar_db/css/index.css" %}" />
-    <title>C-Bar Information Databse</title>
-</head>
-<body>
-    <p>Hello C-Bar world!</p>
-</body>
+{% extends "cbar_db/template.html" %}
+{% block body %}
+    <div class="content_container">
+        <h1>C-Bar Information Database</h1>
+        <div class="nav">
+            <a class="button" href="">Link</a>
+            <a class="button" href="">Link</a>
+            <a class="button" href="">Link</a>
+            <a class="button" href="">Link</a>
+        </div>
+    </div>
+
+    <div class="content_container">
+        <p>
+            Welcome to the C-Bar Therapeutic Horsemanship Information Database. Please click a link above to continue.
+        </p>
+    </div>
+{% endblock %}
