[Re #6] Added views, URLs, and empty templates for the public forms

--- a/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
+++ b/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
@@ -12,6 +12,16 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
+a {
+    text-decoration: none;
+    color: @color_blue_dark;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: @color_blue_light;
+}
+
 .main {
     max-width: 50em;
     margin-left: auto;
@@ -22,6 +32,10 @@ h1, h2, h3, h4, h5, h6 {
     background-color: @color_grey_very_light;
     padding: 1.5em;
     margin-bottom: 3em;
+}
+
+#header a {
+    text-decoration: none;
 }
 
 #footer {
