[Re #10] Made a form. Not the actual form. But made a form.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
@@ -1,4 +1,8 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
-    Media Release form
+    <form action="/your-name/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit" />
+    </form>
 {% endblock %}
