[Re #10] Implemented initial Media Release backend.
TODO:
-Better post form (error and success) handling.
-Make and run tests.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
@@ -1,7 +1,7 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
     <h1>Photo &amp; Media Release</h1>
-    <form action="/your-name/" method="post">
+    <form action="{% url 'public-form-media' %}" method="post">
         {% csrf_token %}
         <p>
             Authorization is given to C-Bar Therapeutic Riding to use and/or
