--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/emergency_authorization.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/emergency_authorization.html
@@ -1,7 +1,26 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
     <h1> Authorization for Emergency Medical Treatment </h1>
-    <form action=method="post">
+    {% if form.errors %}
+        {% for field in form %}
+            {% for error in field.errors %}
+                <div class="alert alert-error">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endfor %}
+        {% for error in form.non_field_errors %}
+            <div class="alert alert-error">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endif %}
+    {% if error_text %}
+        <p><strong>
+            {{ error_text }}
+        </strong></p>
+    {% endif %}
+    <form action="{% url 'public-form-emerg-auth' %}" method="post">
         {% csrf_token %}
         <p>
             Name{{ form.name }} Date of Birth {{ form.birth_date }}
