[Re #9] Added </form> at the end of the html document.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
@@ -11,4 +11,5 @@
       <p>Signature: {{ form.signature }}     Date: {{ form.date }}</p>
 
       <input type="Submit" value="Submit" />
+    </form>
 {% endblock %}
