--- a/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
+++ b/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
@@ -62,3 +62,7 @@ a:hover {
 .button:hover {
     background-color: lighten(@color_background_brown, 15%);
 }
+
+form .error_message {
+    color: red;
+}
