[Re #10] Added birth_date field to 'MediaReleaseForm' and 'media.html'.
(Name and birth date are used to ID a participant when not using the auto generated PK. For example, when a user without an account is entering form data)

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
@@ -11,7 +11,8 @@
              or for any other use for the benefit of the program.
         </p>
         <p>
-            I, {{ form.name }}, {{ form.consent }} to the above.
+            I, {{ form.name }}, born {{ form.birth_date }}, {{ form.consent }}
+             to the above.
         </p>
         <p>
             Signature: {{ form.signature }}. Date: {{ form.date }}
