[Re #9] Fixed backend error.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
@@ -1,6 +1,6 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
-    <h1>LIABILITY RELEASE</h1>
+    <h1>Liability Release</h1>
     <p><strong>Warning: </strong>Under Oklahoma law, an equine professional is
         not liable for an injury to or death of a participant in equine
         activities resulting from the inherent risks of equine activities
