--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/liability.html
@@ -13,7 +13,11 @@
 
     <form action="{% url 'public-form-liability' %}" method="post">
       {% csrf_token %}
-      <p>{{ form.name }} (name of participant) would like to participate in the
+      <p>{{ form.name }}
+          <span class="error_message">
+              {{ form.name.errors.as_text }}
+          </span>
+          (name of participant) would like to participate in the
           C-Bar Horsemanship sponsored program(s). I acknowledge the potential
           risks involved in the various activities performed in the programs
           (e.g., horseback riding and other equine-assisted activities,
@@ -27,7 +31,15 @@
           injuries and/or losses I/my son/my daughter/my ward may sustain while
           participating in C-Bar Horsemanship sponsored programs.</p>
 
-      <p>Signature: {{ form.signature }}     Date: {{ form.date }}</p>
+      <p>Signature: {{ form.signature }}
+          <span class="error_message">
+              {{ form.signature.errors.as_text }}
+          </span>
+          Date: {{ form.date }}
+          <span class="error_message">
+              {{ form.date.errors.as_text }}
+          </span>
+      </p>
 
       <input type="Submit" value="Submit" />
     </form>
